# routes/api.php
@@ -9,6 +9,7 @@ use Illuminate\Support\Facades\Route;
 Route::post('register', [AuthController::class, 'register']);
 Route::post('login', [AuthController::class, 'login']);
 Route::middleware('auth:api')->get('user', [AuthController::class, 'getUser']);
+Route::middleware('auth:api')->get('user/{name}', [AuthController::class, 'getUserName']);
 Route::middleware('auth:api')->put('user', [AuthController::class, 'updateUser']);
 
 Route::middleware('auth:api')->group(function () {
